--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -21,6 +21,7 @@
   copy:
     src: iptablesload
     dest: /etc/network/if-pre-up.d/iptablesload
+    mode: 0700
   notify:
     - restart iptables
 
