[BUGFIX] - Missing change of start -> restart handler naming - Condition might bug in node to delete directory but not unpack new

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -4,7 +4,7 @@
     state: installed
     update_cache: true
   notify:
-    - start nginx
+    - restart nginx
 
 
 - name: nginx | Creates config directory for custom restrictions
